--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  provider: ^ 4.3.2+3
+  provider: ^4.3.2+3
+  curved_navigation_bar: ^1.0.3
 
 
 dev_dependencies:
