--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^4.3.2+3
   curved_navigation_bar: ^1.0.3
+  animated_bottom_navigation_bar: ^0.3.3
 
 
 dev_dependencies:
@@ -29,8 +30,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
