--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^4.3.2+3
   curved_navigation_bar: ^1.0.3
   animated_bottom_navigation_bar: ^0.3.3
+  google_fonts: ^3.0.1
 
 
 dev_dependencies:
