--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   provider: ^4.3.2+3
   curved_navigation_bar: ^1.0.3
   animated_bottom_navigation_bar: ^0.3.3
+  babstrap_settings_screen: ^0.1.3
+  intl: ^0.17.0
 
 
 dev_dependencies:
