--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   animated_bottom_navigation_bar: ^0.3.3
   google_fonts: ^3.0.1
+  pattern_formatter: ^2.0.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
