--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   intl: ^0.17.0
   google_fonts: ^3.0.1
   pattern_formatter: ^2.0.0
+  cloud_firestore: ^3.1.18
 
 
 dev_dependencies:
