--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_fonts: ^3.0.1
   pattern_formatter: ^2.0.0
   cloud_firestore: ^3.1.18
+  syncfusion_flutter_charts: ^20.1.61
 
 
 dev_dependencies:
